--- a/issue/index.html
+++ b/issue/index.html
@@ -338,16 +338,15 @@
     adaptation of having two sidebars so that the content stands out in a rich and
     meaningful way without having to compete for space.</p>
 
-  <p><img
-      src="https://paper-attachments.dropbox.com/s_8EB50DA0D0A711ABEA471876B8E3385A2277E55756A1269C23D06AB156B18B6E_1571148153305_sidebar.jpg"
-      alt="" /></p>
+  <p><img src="olivero__sidebar.jpg"
+      alt="Sidebar floating to the right of the body text" /></p>
 
   <p><strong>RTL Support</strong>
     The theme will fully support right-to-left languages as required by Drupal
     core.</p>
 
-  <p><img src="olivero__sidebar.jpg"
-      alt="Sidebar floating to the right of the body text" /></p>
+  <p><img src="olivero__rtl.jpg"
+      alt="Design is flipped with a right to left language (showing arabic)." /></p>
 
   <p><strong>Messages</strong>
     Messages are used to inform the user of an action that they may need to take,
