Remove errant asterisks.

--- a/issue/index.html
+++ b/issue/index.html
@@ -151,7 +151,7 @@
     and are useful for guiding future additions and feedback for changes.</p>
 
   <ul>
-    <li><strong>Accessible:</strong> WCAG AA <em>*</em>*compliance is a top
+    <li><strong>Accessible:</strong> WCAG AA compliance is a top
       priority for the design. The layout, colors and functionality should provide
       an accessible theme that can be enjoyed by everyone.</li>
 
