More work on search form.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script defer src="dist/scripts.js"></script>
   <script defer src="dist/navigation.js"></script>
   <script defer src="dist/second-level-navigation.js"></script>
+  <script defer src="dist/search.js"></script>
 </head>
 <body>
 <!-- <img class="mock" src="/mock.jpg" alt=""> -->
