Set max width on desktop search form. Add submit button.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                   <form role="search" action="">
                     <label class="visually-hidden" for="search-input">Search</label>
                     <input id="search-input" type="search" placeholder="Search by keyword or phrase.">
+                    <input type="submit" value="Search">
                   </form>
                 </div>
                 <nav class="primary-nav">
