--- a/index.html
+++ b/index.html
@@ -54,11 +54,15 @@
               </div>
               <div id="header-nav" class="header-nav">
                 <div class="search-wrapper">
-                  <form role="search" action="">
-                    <label class="visually-hidden" for="search-input">Search</label>
-                    <input id="search-input" type="search" placeholder="Search by keyword or phrase.">
-                    <input type="submit" value="Search">
-                  </form>
+                  <div class="container">
+                    <div class="grid-full">
+                      <form role="search" action="">
+                        <label class="visually-hidden" for="search-input">Search</label>
+                        <input id="search-input" type="search" placeholder="Search by keyword or phrase.">
+                        <input type="submit" value="Search">
+                      </form>
+                    </div>
+                  </div>
                 </div>
                 <nav class="primary-nav">
                   <ul class="primary-nav--level-1">
