Get search form looking okay at mobile widths.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <div id="header-nav" class="header-nav">
                 <div class="search-wrapper">
                   <div class="container">
-                    <div class="grid-full">
+                    <div class="search-grid">
                       <form role="search" action="">
                         <label class="visually-hidden" for="search-input">Search</label>
                         <input id="search-input" type="search" placeholder="Search by keyword or phrase.">
