WIP on search form interactions.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               </div>
               <div id="header-nav" class="header-nav">
                 <div class="search-wrapper">
-                  <div class="container">
+                  <div class="search-container">
                     <div class="search-grid">
                       <form role="search" action="">
                         <label class="visually-hidden" for="search-input">Search</label>
