Utilize [aria-haspopup] attribute within primary nav second level naigation.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <nav class="primary-nav">
                   <ul class="primary-nav--level-1">
                     <li><a href="#"><span>Home</span></a></li>
-                    <li class="has-children">
+                    <li aria-haspopup="true">
                       <a href="#"><span>Products</span></a>
                       <ul class="primary-nav--level-2">
                         <li><a href="#"><span>Black & White Photos</span></a></li>
