Fix layout issues and contrast of left social bar.

--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
       <aside class="social-container">
         <div class="social-container__inner fixable">
           <div class="rotate">
-            <span aria-hidden="true" class="social-label">RSS Feed</span>
-            <img src="images/rss.svg" alt="RSS">
+            <span class="social-label">RSS Feed</span>
+            <a href="#"><img src="images/rss.svg" alt="RSS"></a>
           </div>
         </div>
       </aside>
