Better focus state for the desktop search button.

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                 <div class="secondary-nav__wrapper">
                   <button class="header-nav__search-button" aria-label="Toggle Search Form">
                     <img src="images/search.svg" alt="Toggle Search Form">
+                    <div class="header-nav__search-button__close"></div>
                   </button>
                   <nav class="secondary-nav">
                     <ul>
