Fix Desktop menu aria-expanded attributes
Replaced aria-pressed with aria-expanded on primary nav button.
Changed aria-expanded on site-header__inner to data-menu-open attribute in order
to preserver the behaviour but not have the incorrect aria semantics.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <!-- Gets fixed by JS at wide widths -->
       <div class="site-header__fixable fixable">
         <div class="header__left">
-          <button class="nav-primary__button" aria-controls="site-header__inner" aria-label="Toggle navigation">
+          <button class="nav-primary__button" aria-controls="site-header__inner" aria-label="Toggle navigation" aria-expanded="false">
             <span class="nav-primary__icon"></span>
           </button>
         </div>
