3092337: Add a message block to the page.

--- a/index.html
+++ b/index.html
@@ -98,6 +98,19 @@
 
     <div class="content">
       <main class="container">
+
+        <div class="messages__wrapper layout-container grid-full">
+          <div role="contentinfo" aria-label="Success message" class="messages messages--success">
+            <img src="images/success.svg" alt="success">
+            <div class="alert" role="alert">
+              <h2 class="visually-hidden">Success message</h2>
+              Get involved.
+              <span class="supporting-text">Looking to contribute? Follow this <a href="https://www.drupal.org/docs/8/themes/olivero/how-to-contribute-to-olivero">link</a> to see how.</span>
+            </div>
+            <img src="images/close.svg" alt="close" class="close">
+          </div>
+        </div>
+
         <a class="visually-hidden" id="main-content" tabindex="-1"></a>
         <div class="grid-full">
           <div class="breadcrumb">
