--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
                 <nav class="primary-nav">
                   <ul class="primary-nav--level-1">
                     <li><a href="#"><span>Home</span></a></li>
-                    <li aria-haspopup="true">
+                    <li class="has-children">
                       <a href="#"><span>Products</span></a>
+                      <button class="primary-nav__button-toggle" aria-expanded="false">Toggle sub-navigation</button>
                       <ul class="primary-nav--level-2">
                         <li><a href="#"><span>Black & White Photos</span></a></li>
                         <li><a href="#"><span>Stone Statues</span></a></li>
