3093249: Add table markup and styling and add hyphen to package.json name.

--- a/index.html
+++ b/index.html
@@ -190,6 +190,38 @@
               errors — but the fancy scroll interactions will not be available to IE11
               users.</p>
 
+            <h2 id="table">You get a table, and You get a table</h2>
+            <p>If you need to show off some columnar stuff with rows, Drupal 9’s core theme is ready to help. Your data will be beautifully represented for all your readers.</p>
+
+            <div class="content-bleed">
+              <table>
+                <thead>
+                  <tr>
+                    <th scope="col">Column Header 1</th>
+                    <th scope="col">Column Header 2</th>
+                    <th scope="col">Column Header 3</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Shiver me timbers holystone</td>
+                    <td>No prey, no pay hulk weigh</td>
+                    <td>Spike grog blossom</td>
+                  </tr>
+                  <tr>
+                    <td>Killick lad code of conduct swing the lead fire.</td>
+                    <td>Shiver me timbers holystone</td>
+                    <td>No prey, no pay hulk weigh</td>
+                  </tr>
+                  <tr>
+                    <td>Killick lad code of conduct swing the lead fire.</td>
+                    <td>Shiver me timbers holystone</td>
+                    <td>No prey, no pay hulk weigh</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+
             <h2>Subheadings are the best!</h2>
             <p>Delectus, doloremque deserunt saepe incidunt, molestias excepturi neque distinctio quos deleniti cum maxime doloribus in dolor exercitationem autem voluptatem quo vero aliquid quia. Enim quidem earum consectetur at, sed placeat?</p>
             <p>Nostrum magni ipsa illo quae! Dolores laborum vel sapiente doloremque perspiciatis ab provident voluptas obcaecati ullam, fuga exercitationem laboriosam ad dolor animi totam nesciunt explicabo est natus iure. Aliquid, qui?</p>
