Add aria-controls on to mobile subnav toggle button.

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                     <li><a href="#"><span>Home</span></a></li>
                     <li class="has-children">
                       <a href="#"><span>Products</span></a>
-                      <button class="primary-nav__button-toggle" aria-expanded="false">Toggle sub-navigation</button>
-                      <ul class="primary-nav--level-2">
+                      <button class="primary-nav__button-toggle" aria-controls="product-submenu" aria-expanded="false">Toggle sub-navigation</button>
+                      <ul id="product-submenu" class="primary-nav--level-2">
                         <li><a href="#"><span>Black & White Photos</span></a></li>
                         <li><a href="#"><span>Stone Statues</span></a></li>
                         <li><a href="#"><span>Antiques & Artifacts</span></a></li>
