3093249: Add caption styling and adjust the width of the table in medium breakpoint.

--- a/index.html
+++ b/index.html
@@ -194,7 +194,8 @@
             <p>If you need to show off some columnar stuff with rows, Drupal 9’s core theme is ready to help. Your data will be beautifully represented for all your readers.</p>
 
             <div class="content-bleed">
-              <table>
+              <table summary="This is the table summary">
+                <caption>Table Header Caption</caption>
                 <thead>
                   <tr>
                     <th scope="col">Column Header 1</th>
