Remove unused class

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <script defer src="dist/navigation.js"></script>
   <script defer src="dist/second-level-navigation.js"></script>
   <script defer src="dist/search.js"></script>
+  <noscript>
+    <link rel="stylesheet" href="dist/noscript.css">
+  </noscript>
 </head>
 
 <body>
@@ -39,7 +42,7 @@
         <!-- Needs to extend full width so box shadow will also extend -->
         <div id="site-header__inner" class="site-header__inner">
           <div class="container">
-            <div class="grid-full grid-full-no-js">
+            <div class="grid-full">
               <div class="site-branding">
                 <div class="site-branding__inner">
                   <a href="">olivero</a>
