3092337-message-block: fix code according to the review comments.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <script defer src="dist/navigation.js"></script>
   <script defer src="dist/second-level-navigation.js"></script>
   <script defer src="dist/search.js"></script>
+  <script defer src="dist/message.js"></script>
 </head>
 <body>
 <!-- <img class="mock" src="/mock.jpg" alt=""> -->
@@ -107,7 +108,7 @@
               Get involved.
               <span class="supporting-text">Looking to contribute? Follow this <a href="https://www.drupal.org/docs/8/themes/olivero/how-to-contribute-to-olivero">link</a> to see how.</span>
             </div>
-            <img src="images/close.svg" alt="close" class="close">
+            <button type="button" class="close" aria-label="Close">Close</button>
           </div>
         </div>
 
