--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
             <div class="content-bleed">
               <table summary="This is the table summary">
-                <caption>Table Header Caption</caption>
+                <caption>Table Header Caption 01</caption>
                 <thead>
                   <tr>
                     <th scope="col">Column Header 1</th>
@@ -218,6 +218,46 @@
                     <td>Killick lad code of conduct swing the lead fire.</td>
                     <td>Shiver me timbers holystone</td>
                     <td>No prey, no pay hulk weigh</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+
+            <h2 id="table">You want more tables? We have more for you!</h2>
+            <p>If you need to show off some columnar stuff with rows, Drupal 9’s core theme is ready to help. Your data will be beautifully represented for all your readers.</p>
+
+            <div class="content-bleed">
+              <table summary="This is the table summary">
+                <caption>Table Header Caption 02</caption>
+                <thead>
+                  <tr>
+                    <th scope="col">Column Header 1</th>
+                    <th scope="col">Column Header 2</th>
+                    <th scope="col">Column Header 3</th>
+                    <th scope="col">Column Header 4</th>
+                    <th scope="col">Column Header 5</th>
+                    <th scope="col">Column Header 6</th>
+                    <th scope="col">Column Header 7</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Delectus, doloremque deserunt saepe incidunt, molestias excepturi neque distinctio quos deleniti cum maxime doloribus in dolor exercitationem autem voluptatem quo vero aliquid quia.</td>
+                    <td>Dicta dolores nisi tenetur eos non. Hic recusandae repellendus provident sequi vel <a href="https://drupal.org">necessitatibus</a>, quidem autem unde consectetur quas illo possimus cupiditate veniam commodi. Quo ut amet, nisi reprehenderit asperiores vel!</td>
+                    <td>Incidunt sint eos perferendis rerum officiis reiciendis veritatis deleniti nisi et reprehenderit. Expedita, exercitationem! Animi temporibus laudantium sed dolorem.</td>
+                    <td>Delectus, doloremque deserunt saepe incidunt, molestias excepturi neque distinctio quos deleniti cum maxime doloribus in dolor exercitationem autem voluptatem quo vero aliquid quia.</td>
+                    <td>Dicta dolores nisi tenetur eos non. Hic recusandae repellendus provident sequi vel necessitatibus, quidem autem unde consectetur quas illo possimus cupiditate veniam commodi. Quo ut amet, nisi reprehenderit asperiores vel!</td>
+                    <td>Incidunt sint eos perferendis rerum <a href="https://drupal.org">officiis reiciendis</a> veritatis deleniti nisi et reprehenderit. Expedita, exercitationem! Animi temporibus laudantium sed dolorem.</td>
+                    <td>Killick lad code of conduct swing the lead fire.</td>
+                  </tr>
+                  <tr>
+                    <td>Delectus, doloremque deserunt saepe incidunt, molestias excepturi neque distinctio quos deleniti cum maxime doloribus in dolor <a href="https://drupal.org">exercitationem autem voluptatem quo</a> vero aliquid quia.</td>
+                    <td>Dicta dolores nisi tenetur eos non. Hic recusandae repellendus provident sequi vel necessitatibus, quidem autem unde consectetur quas illo possimus cupiditate veniam commodi. Quo ut amet, nisi reprehenderit asperiores vel!</td>
+                    <td>Incidunt sint eos perferendis rerum officiis reiciendis veritatis deleniti nisi et reprehenderit. Expedita, exercitationem! Animi temporibus laudantium sed dolorem.</td>
+                    <td>Killick lad code of conduct swing the lead fire.</td>
+                    <td>Delectus, doloremque deserunt saepe incidunt, molestias excepturi neque distinctio quos deleniti cum maxime doloribus in dolor exercitationem autem voluptatem quo vero aliquid quia.</td>
+                    <td>Dicta dolores nisi tenetur eos non. Hic recusandae repellendus provident sequi vel necessitatibus, quidem autem unde consectetur quas illo possimus cupiditate veniam commodi. Quo ut amet, nisi reprehenderit asperiores vel!</td>
+                    <td>Incidunt sint eos perferendis rerum officiis reiciendis veritatis deleniti nisi et reprehenderit. Expedita, exercitationem! Animi temporibus laudantium sed dolorem.</td>
                   </tr>
                 </tbody>
               </table>
