3093249: Adjusted table placeholder content.

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <p>If you need to show off some columnar stuff with rows, Drupal 9’s core theme is ready to help. Your data will be beautifully represented for all your readers.</p>
 
             <div class="content-bleed">
-              <table summary="This is the table summary">
+              <table summary="This is the table summary 01">
                 <caption>Table Header Caption 01</caption>
                 <thead>
                   <tr>
@@ -210,7 +210,7 @@
                     <td>Spike grog blossom</td>
                   </tr>
                   <tr>
-                    <td>Killick lad code of conduct swing the lead fire.</td>
+                    <td>Killick lad code of conduct swing the lead fire. Shiver me timbers holystone.</td>
                     <td>Shiver me timbers holystone</td>
                     <td>No prey, no pay hulk weigh</td>
                   </tr>
@@ -227,7 +227,7 @@
             <p>If you need to show off some columnar stuff with rows, Drupal 9’s core theme is ready to help. Your data will be beautifully represented for all your readers.</p>
 
             <div class="content-bleed">
-              <table summary="This is the table summary">
+              <table summary="This is the table summary 02">
                 <caption>Table Header Caption 02</caption>
                 <thead>
                   <tr>
@@ -253,7 +253,7 @@
                   <tr>
                     <td>Delectus, doloremque deserunt saepe incidunt, molestias excepturi neque distinctio quos deleniti cum maxime doloribus in dolor <a href="https://drupal.org">exercitationem autem voluptatem quo</a> vero aliquid quia.</td>
                     <td>Dicta dolores nisi tenetur eos non. Hic recusandae repellendus provident sequi vel necessitatibus, quidem autem unde consectetur quas illo possimus cupiditate veniam commodi. Quo ut amet, nisi reprehenderit asperiores vel!</td>
-                    <td>Incidunt sint eos perferendis rerum officiis reiciendis veritatis deleniti nisi et reprehenderit. Expedita, exercitationem! Animi temporibus laudantium sed dolorem.</td>
+                    <td>Incidunt sint eos perferendis <a href="https://drupal.org">rerum officiis</a> reiciendis veritatis deleniti nisi et reprehenderit. Expedita, exercitationem! Animi temporibus laudantium sed dolorem.</td>
                     <td>Killick lad code of conduct swing the lead fire.</td>
                     <td>Delectus, doloremque deserunt saepe incidunt, molestias excepturi neque distinctio quos deleniti cum maxime doloribus in dolor exercitationem autem voluptatem quo vero aliquid quia.</td>
                     <td>Dicta dolores nisi tenetur eos non. Hic recusandae repellendus provident sequi vel necessitatibus, quidem autem unde consectetur quas illo possimus cupiditate veniam commodi. Quo ut amet, nisi reprehenderit asperiores vel!</td>
