--- a/index.html
+++ b/index.html
@@ -42,12 +42,7 @@
                   <a href="">olivero</a>
                 </div>
               </div>
-              <div class="mobile-buttons">
-                <button class="mobile-nav-button">
-                  <div class="mobile-nav-button__label">Menu</div>
-                  <div class="mobile-nav-button__icon"></div>
-                </button>
-              </div>
+              <div class="mobile-buttons"></div>
               <div id="header-nav" class="header-nav">
                 <div class="search-wrapper">
                   <div class="search-container">
@@ -65,7 +60,6 @@
                     <li><a href="#"><span>Home</span></a></li>
                     <li class="has-children">
                       <a href="#"><span>Products</span></a>
-                      <button class="primary-nav__button-toggle" aria-controls="product-submenu" aria-expanded="false">Toggle sub-navigation</button>
                       <ul id="product-submenu" class="primary-nav--level-2">
                         <li><a href="#"><span>Black & White Photos</span></a></li>
                         <li><a href="#"><span>Stone Statues</span></a></li>
