Remove the word 'toggle' from search aria-label

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                   </ul>
                 </nav>
                 <div class="secondary-nav__wrapper">
-                  <button class="header-nav__search-button" aria-label="Toggle Search Form">
-                    <img src="images/search.svg" alt="Toggle Search Form">
+                  <button class="header-nav__search-button" aria-label="Search Form">
+                    <img src="images/search.svg" alt="Search Form">
                     <div class="header-nav__search-button__close"></div>
                   </button>
                   <nav class="secondary-nav">
