--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
                 </button>
               </div>
               <div id="header-nav" class="header-nav">
-                <div class="search-wrapper">
+                <div class="search-wrapper search-wrapper--mobile">
                   <div class="search-container">
                     <div class="search-grid">
                       <form role="search" action="">
-                        <label class="visually-hidden" for="search-input">Search</label>
-                        <input id="search-input" type="search" placeholder="Search by keyword or phrase.">
+                        <label class="visually-hidden" for="search-input-mobile">Search</label>
+                        <input id="search-input-mobile" type="search" placeholder="Search by keyword or phrase.">
                         <input type="submit" value="Search">
                       </form>
                     </div>
@@ -78,11 +78,22 @@
                     <li><a href="#"><span>Contact</span></a></li>
                   </ul>
                 </nav>
+                <button class="header-nav__search-button" aria-label="Search Form" aria-controls="search-container--desktop">
+                  <img src="images/search.svg" alt="Search Form">
+                  <div class="header-nav__search-button__close"></div>
+                </button>
                 <div class="secondary-nav__wrapper">
-                  <button class="header-nav__search-button" aria-label="Search Form">
-                    <img src="images/search.svg" alt="Search Form">
-                    <div class="header-nav__search-button__close"></div>
-                  </button>
+                  <div class="search-wrapper search-wrapper--desktop" id="search-wrapper--desktop">
+                    <div class="search-container">
+                      <div class="search-grid">
+                        <form role="search" action="">
+                          <label class="visually-hidden" for="search-input-desktop">Search</label>
+                          <input id="search-input-desktop" type="search" placeholder="Search by keyword or phrase.">
+                          <input type="submit" value="Search">
+                        </form>
+                      </div>
+                    </div>
+                  </div>
                   <nav class="secondary-nav">
                     <ul>
                       <li><a href="#">Login</a></li>
