Remove aria-expanded logic and styles from wrapper

--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
                     <li><a href="#"><span>Contact</span></a></li>
                   </ul>
                 </nav>
-                <button class="header-nav__search-button" aria-label="Search Form" aria-controls="search-container--desktop">
-                  <img src="images/search.svg" alt="Search Form">
-                  <div class="header-nav__search-button__close"></div>
-                </button>
                 <div class="secondary-nav__wrapper">
+                  <button class="header-nav__search-button" aria-label="Search Form" aria-controls="search-wrapper--desktop">
+                    <img src="images/search.svg" alt="Search Form">
+                    <div class="header-nav__search-button__close"></div>
+                  </button>
                   <div class="search-wrapper search-wrapper--desktop" id="search-wrapper--desktop">
                     <div class="search-container">
                       <div class="search-grid">
