Ensure wide mode's 'expand/contract' nav button is visible and focusable within Windows high contrast mode.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
       <div class="site-header__fixable fixable">
         <div class="header__left">
           <button class="nav-primary__button" aria-controls="site-header__inner" aria-label="Toggle navigation" aria-expanded="false">
-            <span class="nav-primary__icon"></span>
+            <span class="nav-primary__icon">
+              <div></div>
+              <div></div>
+              <div></div>
+            </span>
           </button>
         </div>
 
