--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script defer src="dist/second-level-navigation.js"></script>
   <script defer src="dist/search.js"></script>
 </head>
-<body class="is-always-mobile-nav">
+<body>
 <!-- <img class="mock" src="/mock.jpg" alt=""> -->
 
   <div class="page-wrapper">
