--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script defer src="dist/second-level-navigation.js"></script>
   <script defer src="dist/search.js"></script>
 </head>
-<body>
+<body class="is-always-mobile-nav">
 <!-- <img class="mock" src="/mock.jpg" alt=""> -->
 
   <div class="page-wrapper">
@@ -82,40 +82,42 @@
                     <li><a href="#"><span>Contact</span></a></li>
                   </ul>
                 </nav>
-                <div class="secondary-nav__wrapper">
-                  <button class="header-nav__search-button" aria-label="Toggle Search Form">
-                    <svg width="24px" height="25px" viewBox="0 0 24 25" version="1.1"
-                      xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                      <title>Search Icon</title>
-                      <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                        <g id="Group">
-                          <rect id="Rectangle" fill="#FFFFFF" x="0" y="0" width="24" height="25">
-                          </rect>
-                          <g id="search" transform="translate(1.000000, 1.000000)" fill="#0D1214">
-                            <path
-                              d="M18,10 C18,14.4183 14.4183,18 10,18 C5.58172,18 2,14.4183 2,10 C2,5.58172 5.58172,2 10,2 C14.4183,2 18,5.58172 18,10 Z M15.7608,18.175 C14.1323,19.3246 12.145,20 10,20 C4.47715,20 0,15.5228 0,10 C0,4.47715 4.47715,0 10,0 C15.5228,0 20,4.47715 20,10 C20,12.6561 18.9645,15.0703 17.2752,16.8609 L21.7071,21.2929 C22.0976,21.6834 22.0976,22.3166 21.7071,22.7071 C21.3166,23.0976 20.6834,23.0976 20.2929,22.7071 L15.7608,18.175 Z"
-                              id="Shape"></path>
-                          </g>
+                <button class="header-nav__search-button" aria-label="Toggle Search Form">
+                  <svg width="24px" height="25px" viewBox="0 0 24 25" version="1.1"
+                    xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <title>Search Icon</title>
+                    <g id="Page-1" stroke="none" stroke-width="1" fill="none"
+                      fill-rule="evenodd">
+                      <g id="Group">
+                        <rect id="Rectangle" fill="#FFFFFF" x="0" y="0" width="24" height="25">
+                        </rect>
+                        <g id="search" transform="translate(1.000000, 1.000000)" fill="#0D1214">
+                          <path
+                            d="M18,10 C18,14.4183 14.4183,18 10,18 C5.58172,18 2,14.4183 2,10 C2,5.58172 5.58172,2 10,2 C14.4183,2 18,5.58172 18,10 Z M15.7608,18.175 C14.1323,19.3246 12.145,20 10,20 C4.47715,20 0,15.5228 0,10 C0,4.47715 4.47715,0 10,0 C15.5228,0 20,4.47715 20,10 C20,12.6561 18.9645,15.0703 17.2752,16.8609 L21.7071,21.2929 C22.0976,21.6834 22.0976,22.3166 21.7071,22.7071 C21.3166,23.0976 20.6834,23.0976 20.2929,22.7071 L15.7608,18.175 Z"
+                            id="Shape"></path>
                         </g>
                       </g>
-                    </svg>
-                    <div class="header-nav__search-button__close"></div>
-                  </button>
-                  <div class="search-wide__wrapper">
-                    <div class="search-wide__container">
-                      <div class="search-wide__grid">
-                        <form role="search" action="">
-                          <label class="visually-hidden" for="search-wide-input">Search</label>
-                          <input id="search-wide-input" type="search"
-                            placeholder="Search by keyword or phrase.">
-                          <button type="submit">
-                              <span class="icon--search"></span>
-                              <span class="visually-hidden">Search</span>
-                          </button>
-                        </form>
-                      </div>
+                    </g>
+                  </svg>
+                  <div class="header-nav__search-button__close"></div>
+                </button>
+                <div class="search-wide__wrapper">
+                  <div class="search-wide__container">
+                    <div class="search-wide__grid">
+                      <form role="search" action="">
+                        <label class="visually-hidden" for="search-wide-input">Search</label>
+                        <input id="search-wide-input" type="search"
+                          placeholder="Search by keyword or phrase.">
+                        <button type="submit">
+                          <span class="icon--search"></span>
+                          <span class="visually-hidden">Search</span>
+                        </button>
+                      </form>
                     </div>
                   </div>
+                </div>
+                <div class="secondary-nav__wrapper">
                   <nav class="secondary-nav" aria-labelledby="secondary-menu-description">
                     <span id="secondary-menu-description" class="visually-hidden">Secondary Menu</span>
                     <ul>
