Copy wide search focus states to narrow search.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
                   <form role="search" action="">
                     <label class="visually-hidden" for="search-narrow-input">Search</label>
                     <input id="search-narrow-input" type="search" placeholder="Search by keyword or phrase.">
-                    <input type="submit" value="Search">
+                    <button type="submit">
+                      <span class="icon--search"></span>
+                      <span class="visually-hidden">Search</span>
+                    </button>
                   </form>
                 </div>
                 <nav class="primary-nav" aria-labelledby="main-menu-description">
